--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
         <br />
         <ion-list-header>Select A Bus Stop That You Will Get On The Bus</ion-list-header>
         <div id="GMap" style="height: 60%;width:95%;left:2.5%"></div>
+        <p id="selected"></p>
         <ion-list-header>How many miles before the bus approaches the stop do you want to get a notification.
         </ion-list-header>
         <ion-item>
             <ion-input type="number" placeholder="Enter a number"></ion-input>
         </ion-item>
-        <ion-item>
-            <ion-button>Set The Alarm!</ion-button>
-        </ion-item>
+        <!-- <ion-item> -->
+        <ion-button expand="block">Set The Notification!</ion-button>
+        <!-- </ion-item> -->
     </ion-content>
     <!-- The bus icon is created by <a href="https://iconscout.com/icons/dot" target="_blank">Dot Icon</a> by <a href="https://iconscout.com/contributors/daniel-bruce">Daniel Bruce</a> on <a href="https://iconscout.com">Iconscout</a> -->
 </ion-modal>
@@ -143,6 +144,7 @@
                             //you sure this is from copolit, gangkaishi hai yiweishism wanyi/ pathshism yuyiduihuansuanttyiweisvg zhejianzhishishengqi aaa!!!push houmianquanbushengchengchulais
                         }
                         var stops = {}; //yuenixnbunenghzijie stops;
+                        var selectedStop = -1;
                         fetch('http://coder.weathon.top:8888/stops')
                             .then(function (response) {
                                 return response.json();
@@ -150,17 +152,30 @@
                             .then(function (json) {
                                 var stops = json;
                                 console.log(stops)
+                                markers = [] //not {}
+
                                 for (var i = 0; i < route.stops.length; i++) {
                                     for (var j = 0; j < stops.length; j++) {
                                         // console.log(j.id) stupid copolit 
                                         if (stops[j].id == route.stops[i]) {
                                             var stop = stops[j]
-                                            console.log(stop)
-                                            new google.maps.Marker({
+                                            console.log(stop.id)
+                                            markers.push(new google.maps.Marker({
                                                 position: { lat: stop.lat, lng: stop.lon },
                                                 map,
-                                                icon:"dot.png",
-                                            });
+                                                icon: "dot.png",
+                                                // title: stop.name,
+                                                // stopID: stop.id,
+                                            }));
+                                            addEvent(stop, markers[length - 1]);//weismmeixiangdao
+                                            // markers[markers.length-1].addListener("click", () => {
+                                            // google.maps.event.addListener(markers[markers.length-1], "click", () => {
+                                            //     console.log(stop.name)
+                                            //     document.getElementById("selected").innerHTML = "You have selected " + stop.name;
+                                            // }); // meixinagdao haiyouname
+                                            // document.getElementById("selected").innerHTML = "&#160;&#160;&#160;&#160;Stop Selected. " + stop.id //quanbudoushiyiyangde hlonsgaunkouekzangshou push
+                                            // selectedStop = stop.id;
+                                            // });
                                         }
                                     }
                                 }
@@ -183,7 +198,19 @@
             }
         }
     });
+    function addEvent(stop, marker) {
+        console.log(stop);
+        // marker.addListener("click", () => {
+        //     console.log(stop.name)
+        //     document.getElementById("selected").innerHTML = "You have selected " + stop.name;
+        // });
+        google.maps.event.addListener(markers[markers.length - 1], "click", () => {
+            console.log(stop.name)
+            document.getElementById("selected").innerHTML = "You have selected " + stop.name;
+        }); //xkouhlongzheyangkeyile!
+    }
 
+//hanerduoxkoubierenchaozidongfuzhide tiechulailekun 
 </script>
 
 </body>
